# nyxvm

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ast.dot  runtest.py
doc/: builtin.md  bytecode.md  reference.md
nyx/: Ast.cpp  Ast.h  AstDump.cpp  AstDump.h  AstVisitor.h  Main.cpp  Parser.cpp  Parser.h  Token.h  Utils.cpp  Utils.hpp
nyx/bytecode/: Bytecode.cpp  Bytecode.h  BytecodeDump.cpp  BytecodeDump.h  BytecodeGenerator.cpp  BytecodeGenerator.h  MetaArea.cpp  MetaArea.h  Opcode.cpp  Opcode.h
nyx/gc/: GenHeap.cpp  GenHeap.h  Space.cpp  Space.h
nyx/interpreter/: Frame.cpp  Frame.h  Interpreter.cpp  Interpreter.h  Object.cpp  Object.h
nyx/object/: NHeader.cpp  NHeader.h  NObject.cpp  NObject.h  NType.cpp  NType.h  NTypeArray.cpp  NTypeArray.h  NTypeCallable.cpp  NTypeCallable.h  NTypeString.cpp  NTypeString.h  NValue.cpp  NValue.h  NonInstantiable.h
nyx/parser/: Ast.cpp  Ast.h  AstDump.cpp  AstDump.h  Parser.cpp  Parser.h  Token.h
nyx/runtime/: Builtin.cpp  Builtin.h  Global.h  Global.hpp  NObject.cpp  NObject.h  NyxVM.cpp  NyxVM.h  Object.cpp  Object.h  Utils.cpp  Utils.hpp
nyx/util/: Utils.cpp  Utils.h
nyx_test/interesting/: first_impression.nyx  prime.nyx  reverse_array.nyx
nyx_test/tiresome/: arithmetic.nyx  array.nyx  bitwise.nyx  builtin.nyx  call.nyx  chars.nyx  closure.nyx  closure1.nyx  closure2.nyx  compound_assign.nyx  condition.nyx  control_gen.nyx  function.nyx  hello.nyx  interpreter.nyx  match.nyx  mod_a.nyx  statement.nyx  str.nyx
tool/: ast.dot  runtest.py  visualize_ast.py
